--- a/php/apps/composer.json
+++ b/php/apps/composer.json
@@ -1,5 +1,8 @@
 {
-    "require": {
-        "unirest/unirest": "^3.0"
+    "require" : {
+      "mashape/unirest-php" : "dev-master"
+    },
+    "autoload": {
+      "psr-0": {"Unirest": "lib/"}
     }
-}
+  }
